# DFT-free-token

./: .gitignore  .gitpod.yml  .pre-commit-config.yaml  README.md
.github/workflows/: build.yml  release.yml  run_integration_test.yml  token-test-net.yml
src/: Cargo.toml  cucumber-report.json  cucumber.js  dfx.json  dfx_package.json  ic-dev-kit.json  package-lock.json  package.json  rust-toolchain.toml  sh_build.sh  sh_dft_blocklist.sh  sh_did.sh  sh_generate.sh  sh_go.sh  sh_package.sh  sh_post_container_created.sh  sh_publish.sh  sh_reinstall.sh  sh_setup_dev.sh  start_clean.sh  tsconfig.json
src/.devcontainer/: devcontainer.json
src/canister_ids/: local.json
src/canisters/free_token/: Cargo.toml  build.rs
src/canisters/free_token/src/: actor.rs  canister_api.rs  constants.rs  free_token.did  ic_logger.rs  lib.rs  permissions.rs  received_reward_store.rs  reward_store.rs  service.rs  state.rs
src/canisters/free_token/src/canister_api/: api_impl.rs  tests.rs
src/canisters/free_token/src/received_reward_store/: tests.rs
src/canisters/free_token/src/service/: tests.rs
src/env_configs/: dev.canister_ids.env  dev.principals.env  production.principals.env
src/package_canister_env/undefined/: free_token.wasm  registrar.wasm  token_mintable.did
src/scripts/: createIdentities.ts  create_package.ts  generate.ts  reinstall_all.ts  updateDid.ts  updateLocalConfigs.ts
src/scripts/features/: free_token.feature  mintable.feature
src/scripts/src/: tasks.ts
src/tokens/: tokens.json
src/tokens/package/: dfx.json
src/tokens/package/assets/: registrar.wasm  (+4 more)
(+27 files in other folders)
