[package]
name = "free_token"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.5.1"
ic-cdk-macros = "0.5.1"
candid = "0.7.14"
serde = "1.0.136"
serde_bytes = "0.11"
getset = "0.1.2"
log = "0.4"
url = "2.2.2"
hex = "0.4.3"
anyhow = "1.0.57"
thiserror = "1.0"
num-bigint = { version = "0.4.3", default-features = false }
async-trait = "0.1.53"
yansi = "0.5.1"


[dev-dependencies]
pretty_env_logger = "0.4"
rstest = "0.12.0"
async-std = { version = "1.11", features = ["attributes"] }
mockall = "0.11.0"
